add icon, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -57,3 +57,6 @@ server_status:
 
 white_cobalt:
   - liubquanti.white.cobalt/liubquanti.white.cobalt.MainActivity
+
+foods_co:
+  - net.foodsco.mobile/com.inmar.android.app.eretail.ui.activities.MainActivity
