--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -48,3 +48,15 @@ jetstar:
   
 nebula:
   - tv.standard.nebula/tv.standard.nebula.main.view.activities.MainActivity
+
+folo:
+  - is.follow/is.follow.MainActivity
+
+server_status:
+  - com.jgeek00.ServerStatus/com.jgeek00.ServerStatus.MainActivity
+
+white_cobalt:
+  - liubquanti.white.cobalt/liubquanti.white.cobalt.MainActivity
+
+foods_co:
+  - net.foodsco.mobile/com.inmar.android.app.eretail.ui.activities.MainActivity
