new icons and comp info update

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,16 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+blinkit:
+  - com.grofers.customerapp/com.grofers.customerapp.DIWALI
+
+youtube_revanced:
+  - app.revanced.android.youtube/com.google.android.youtube.app.honeycomb.Shell$HomeActivity
+  - app.revanced.android.youtube/app.revanced.android.youtube.revanced_original_1
+
+digitap:
+  - com.havells.digitap/com.smart.ThingSplashActivity
+
+clearscanner:
+  - com.indymobileapp.document.scanner/com.indymobile.app.activity.SplashScreenActivity
