--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -31,3 +31,9 @@ bild_news:
 
 dlf:
   - de.deutschlandradio.dlf24/de.deutschlandradio.dlf24.MainActivity
+
+finanzguru:
+  - de.dwins.financeguru/de.dwins.financeguru.MainActivity
+
+pebble:
+  - coredevices.coreapp/coredevices.coreapp.MainActivity
