Add icons&compinfo (#1280)
* add icons, premium request

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -25,3 +25,15 @@ digitap:
 
 clearscanner:
   - com.indymobileapp.document.scanner/com.indymobile.app.activity.SplashScreenActivity
+
+bild_news:
+  - com.netbiscuits.bild.android/de.bild.android.app.MainActivity
+
+dlf:
+  - de.deutschlandradio.dlf24/de.deutschlandradio.dlf24.MainActivity
+
+finanzguru:
+  - de.dwins.financeguru/de.dwins.financeguru.MainActivity
+
+pebble:
+  - coredevices.coreapp/coredevices.coreapp.MainActivity
