Fix gps_joystick and link nagram x

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -37,3 +37,6 @@ finanzguru:
 
 pebble:
   - coredevices.coreapp/coredevices.coreapp.MainActivity
+
+nagram_blue:
+  - nu.gpu.nagram/org.telegram.messenger.BlueIcon
