--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -40,3 +40,6 @@ pebble:
 
 nagram_blue:
   - nu.gpu.nagram/org.telegram.messenger.BlueIcon
+
+carbit_link:
+  - net.easyconn.carman.wws/net.easyconn.carman.MainActivity
