--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -43,3 +43,6 @@ nagram_blue:
 
 carbit_link:
   - net.easyconn.carman.wws/net.easyconn.carman.MainActivity
+
+pmo_plus:
+  - my.com.publicmutual.CIFMobileApp/my.com.publicmutual.CIFMobileApp.InitApplicationActivity
