--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -46,3 +46,6 @@ carbit_link:
 
 pmo_plus:
   - my.com.publicmutual.CIFMobileApp/my.com.publicmutual.CIFMobileApp.InitApplicationActivity
+
+wafrn:
+  - dev.djara.wafrn_rn/dev.djara.wafrn_rn.MainActivity
