--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -49,3 +49,6 @@ pmo_plus:
 
 wafrn:
   - dev.djara.wafrn_rn/dev.djara.wafrn_rn.MainActivity
+
+heptabase:
+  - com.heptabase.heptabase/com.heptabase.heptabase.MainActivity
