--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -16,6 +16,10 @@
 blinkit:
   - com.grofers.customerapp/com.grofers.customerapp.DIWALI
 
+jiomart:
+  - com.jpl.jiomart/com.jpl.jiomart.dashboard.activities.SplashActivityAlias1
+  - com.jpl.jiomart/com.jcpjiomart.MainActivity 
+
 youtube_revanced:
   - app.revanced.android.youtube/com.google.android.youtube.app.honeycomb.Shell$HomeActivity
   - app.revanced.android.youtube/app.revanced.android.youtube.revanced_original_1
