Add urban company

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -52,3 +52,6 @@ wafrn:
 
 heptabase:
   - com.heptabase.heptabase/com.heptabase.heptabase.MainActivity
+
+urban_company:
+  - com.urbanclap.urbanclap/com.urbanclap.urbanclap.core.app_icon.NormalUser
