--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -55,3 +55,6 @@ heptabase:
 
 urban_company:
   - com.urbanclap.urbanclap/com.urbanclap.urbanclap.core.app_icon.NormalUser
+
+postbank:
+  - de.postbank.banking/com.db.dbmobile.unity.feature.splash.SplashActivity
