Change postbank to alt

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -56,5 +56,4 @@ heptabase:
 urban_company:
   - com.urbanclap.urbanclap/com.urbanclap.urbanclap.core.app_icon.NormalUser
 
-postbank:
-  - de.postbank.banking/com.db.dbmobile.unity.feature.splash.SplashActivity
+postbank_alt_1: {}
