--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -41,3 +41,23 @@ finanzguru:
 
 pebble:
   - coredevices.coreapp/coredevices.coreapp.MainActivity
+
+nagram_blue:
+  - nu.gpu.nagram/org.telegram.messenger.BlueIcon
+
+carbit_link:
+  - net.easyconn.carman.wws/net.easyconn.carman.MainActivity
+
+pmo_plus:
+  - my.com.publicmutual.CIFMobileApp/my.com.publicmutual.CIFMobileApp.InitApplicationActivity
+
+wafrn:
+  - dev.djara.wafrn_rn/dev.djara.wafrn_rn.MainActivity
+
+heptabase:
+  - com.heptabase.heptabase/com.heptabase.heptabase.MainActivity
+
+urban_company:
+  - com.urbanclap.urbanclap/com.urbanclap.urbanclap.core.app_icon.NormalUser
+
+postbank_alt_1: {}
