--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -70,3 +70,6 @@ sarawakpass:
 
 skybus:
   - au.com.skybus/au.com.skybus.basicScreens.onboarding.SplashActivity
+
+portanexus:
+  - com.tiagorvmartins.portanexus/com.tiagorvmartins.portanexus.MainActivity
