--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -73,3 +73,6 @@ skybus:
 
 portanexus:
   - com.tiagorvmartins.portanexus/com.tiagorvmartins.portanexus.MainActivity
+
+jetstar:
+  - com.ink.jetstar.mobile.app/com.ink.jetstar.mobile.app.MainActivity
