Add icons&compinfo (#1283)
* add icons, premium requests

* add icon

* add componentinfo

* small fix

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -61,3 +61,15 @@ urban_company:
   - com.urbanclap.urbanclap/com.urbanclap.urbanclap.core.app_icon.NormalUser
 
 postbank_alt_1: {}
+
+ailo:
+  - app.ailo/app.ailo.MainActivity
+
+sarawakpass:
+  - my.gov.sarawak.spass/my.gov.sarawak.spass.MainActivity
+
+skybus:
+  - au.com.skybus/au.com.skybus.basicScreens.onboarding.SplashActivity
+
+portanexus:
+  - com.tiagorvmartins.portanexus/com.tiagorvmartins.portanexus.MainActivity
