new icons and comp info

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -73,3 +73,6 @@ skybus:
 
 portanexus:
   - com.tiagorvmartins.portanexus/com.tiagorvmartins.portanexus.MainActivity
+
+quitter:
+  - com.quitter.app/com.quitter.app.MainActivity
