new icons and comp info

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -76,3 +76,6 @@ portanexus:
 
 quitter:
   - com.quitter.app/com.quitter.app.MainActivity
+
+kimi_ai:
+  - com.moonshot.kimichat/com.moonshot.kimichat.MainActivity
