--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -79,3 +79,10 @@ quitter:
 
 kimi_ai:
   - com.moonshot.kimichat/com.moonshot.kimichat.MainActivity
+
+proton_mail:
+  - ch.protonmail.android/ch.protonmail.android.activities.SplashActivity
+  - ch.protonmail.android/ch.protonmail.android.mailbox.presentation.ui.MailboxActivity 
+  - ch.protonmail.android/ch.protonmail.android.MainActivity
+  - ch.protonmail.android/ch.protonmail.android.RoutingActivity
+
