Add MyGeotab + Update Smart Launcer icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -45,3 +45,12 @@ credit_union_sa:
   
 jetstar:
   - com.ink.jetstar.mobile.app/com.ink.jetstar.mobile.app.MainActivity
+
+mygeotab:
+  - com.geotab.mygeotab/com.geotab.mygeotab.SplashActivity
+
+bible:
+  - app.bible.lite.offline/youversion.bible.app.MainActivity
+  - nl.cross_link.droid.olb/crc6410702a27ea4b0fae.MainActivity
+  - kjvbible.verse.daily.bible.prayer/IlIIll1lII.ll1Ill11l1.l1ll1lI1l1.lI11ll11I1.IlIIlllI1l
+  - com.schwegelbin.openbible/com.schwegelbin.openbible.MainActivity
