--- a/contribs/requests.yml
+++ b/contribs/requests.yml
@@ -41,9 +41,8 @@ taxi.tap30.passenger/taxi.tap30.passenger.MainActivity:
         - https://f-droid.org/en/packages/taxi.tap30.passenger/
         - https://google.com/search?q=taxi.tap30.passenger
 
-? com.samsung.android.displayassistant/com.samsung.android.displayassistant.presentation.ui.main.DisplayAssistantMainActivity
-
-:   name: Display Assistant
+com.samsung.android.displayassistant/com.samsung.android.displayassistant.presentation.ui.main.DisplayAssistantMainActivity:
+    name: Display Assistant
     reqt: 6
     reql: 2025-09-29 13:49:52
     hash: 6f09848da355068248830c75e864633b9c3f7af0
@@ -472,9 +471,8 @@ code.effinmr.music/code.name.monkey.retromusic.activities.MainActivity:
         - https://f-droid.org/en/packages/code.effinmr.music/
         - https://google.com/search?q=code.effinmr.music
 
-? com.com2us.smon.normal.freefull.google.kr.android.common/com.com2us.smon.normal.freefull.google.kr.android.common.SubActivity
-
-:   name: Summoners War
+com.com2us.smon.normal.freefull.google.kr.android.common/com.com2us.smon.normal.freefull.google.kr.android.common.SubActivity:
+    name: Summoners War
     reqt: 2
     reql: 2025-10-07 07:22:50
     hash: 00e087d369bde60e111be6b22d047789bcbf0058
@@ -4243,9 +4241,8 @@ mx.gob.sat/mx.gob.sat.MainActivity:
         - https://f-droid.org/en/packages/mx.gob.sat/
         - https://google.com/search?q=mx.gob.sat
 
-? com.bolindadigital.BorrowBoxLibrary/com.bolinda.digital.library.mobile.android.new_package_structure.migration.ui.PreStartActivity
-
-:   name: BorrowBox
+com.bolindadigital.BorrowBoxLibrary/com.bolinda.digital.library.mobile.android.new_package_structure.migration.ui.PreStartActivity:
+    name: BorrowBox
     reqt: 1
     reql: 2025-09-13 21:09:48
     hash: 292342114efa95aa58a7166b170557e6cde842bf
@@ -5764,9 +5761,8 @@ org.wesnoth.Wesnoth/org.wesnoth.Wesnoth.InitActivity:
         - https://f-droid.org/en/packages/org.wesnoth.Wesnoth/
         - https://google.com/search?q=org.wesnoth.Wesnoth
 
-? com.mysalesforce.mycommunity.C00D6g000000DEMvEAO.A0OT3p000000CaRIGA0/com.mysalesforce.mycommunity.C00D6g000000DEMvEAO.A0OT3p000000CaRIGA0.MainActivity
-
-:   name: DonorHub
+com.mysalesforce.mycommunity.C00D6g000000DEMvEAO.A0OT3p000000CaRIGA0/com.mysalesforce.mycommunity.C00D6g000000DEMvEAO.A0OT3p000000CaRIGA0.MainActivity:
+    name: DonorHub
     reqt: 1
     reql: 2025-09-01 15:40:51
     hash: c509ae04889a9f6ebfa6c0a1b28b04b990d0bc39
@@ -6145,16 +6141,6 @@ com.steprevolution.smxmobile/com.steprevolution.smxmobile.SplashActivity:
         - https://f-droid.org/en/packages/com.steprevolution.smxmobile/
         - https://google.com/search?q=com.steprevolution.smxmobile
 
-kjvbible.verse.daily.bible.prayer/IlIIll1lII.ll1Ill11l1.l1ll1lI1l1.lI11ll11I1.IlIIlllI1l:
-    name: KJV Daily Bible
-    reqt: 1
-    reql: 2025-08-29 10:46:46
-    hash: cf07c5262d457084ea8bf4e1260602851752aabb
-    urls:
-        - https://play.google.com/store/apps/details?id=kjvbible.verse.daily.bible.prayer
-        - https://f-droid.org/en/packages/kjvbible.verse.daily.bible.prayer/
-        - https://google.com/search?q=kjvbible.verse.daily.bible.prayer
-
 com.tencent.tmgp.kgame.catssoup/com.seayoo.sdk.api.EulaActivity:
     name: 猫咪和汤
     reqt: 1
@@ -6234,16 +6220,6 @@ com.plebstr.client/com.plebstr.client.MainActivity:
         - https://play.google.com/store/apps/details?id=com.plebstr.client
         - https://f-droid.org/en/packages/com.plebstr.client/
         - https://google.com/search?q=com.plebstr.client
-
-com.schwegelbin.openbible/com.schwegelbin.openbible.MainActivity:
-    name: OpenBible
-    reqt: 1
-    reql: 2025-08-28 14:50:15
-    hash: 9c9c0066e8e84d5f2ce2664de63cea7cf45c44dd
-    urls:
-        - https://play.google.com/store/apps/details?id=com.schwegelbin.openbible
-        - https://f-droid.org/en/packages/com.schwegelbin.openbible/
-        - https://google.com/search?q=com.schwegelbin.openbible
 
 com.transsion.carlcare/com.transsion.carlcare.MainActivity:
     name: Carlcare
@@ -6965,16 +6941,6 @@ com.ates.DELTARUNE/com.ates.DELTARUNE.RunnerActivity:
         - https://f-droid.org/en/packages/com.ates.DELTARUNE/
         - https://google.com/search?q=com.ates.DELTARUNE
 
-app.bible.lite.offline/youversion.bible.app.MainActivity:
-    name: Bible
-    reqt: 1
-    reql: 2025-08-21 20:39:18
-    hash: 45d5a835e8299da05d29c3d2648c1214c7db2b1c
-    urls:
-        - https://play.google.com/store/apps/details?id=app.bible.lite.offline
-        - https://f-droid.org/en/packages/app.bible.lite.offline/
-        - https://google.com/search?q=app.bible.lite.offline
-
 com.rabbittownsoftware.convertly/com.rabbittownsoftware.convertly.MainActivity:
     name: Convertly
     reqt: 1
@@ -7365,9 +7331,8 @@ org.futureme/org.futureme.MainActivity:
         - https://f-droid.org/en/packages/org.futureme/
         - https://google.com/search?q=org.futureme
 
-? eraapps.bankasia.bdinternetbanking.apps/eraapps.bankasia.bdinternetbanking.apps.presentation.home.remote.splace_screen.SplashScreen
-
-:   name: SMART App
+eraapps.bankasia.bdinternetbanking.apps/eraapps.bankasia.bdinternetbanking.apps.presentation.home.remote.splace_screen.SplashScreen:
+    name: SMART App
     reqt: 1
     reql: 2025-08-17 12:49:01
     hash: 842e6c92bf11fa29b1fac69d50b86b91fdb6bc10
@@ -7935,16 +7900,6 @@ com.celularlegal/com.celularlegal.MainActivity:
         - https://play.google.com/store/apps/details?id=com.celularlegal
         - https://f-droid.org/en/packages/com.celularlegal/
         - https://google.com/search?q=com.celularlegal
-
-nl.cross_link.droid.olb/crc6410702a27ea4b0fae.MainActivity:
-    name: Online Bible
-    reqt: 1
-    reql: 2025-08-11 00:13:22
-    hash: e258b3417b9dc1d4a853f430ce2655ae1e5bcc81
-    urls:
-        - https://play.google.com/store/apps/details?id=nl.cross_link.droid.olb
-        - https://f-droid.org/en/packages/nl.cross_link.droid.olb/
-        - https://google.com/search?q=nl.cross_link.droid.olb
 
 org.angelauramc.amethyst.debug/net.kdt.pojavlaunch.TestStorageActivity:
     name: Amethyst
@@ -8896,9 +8851,8 @@ it.eighteenmonths.mystique.android.metropolis/it.eighteenmonths.mystique.android
         - https://f-droid.org/en/packages/it.eighteenmonths.mystique.android.metropolis/
         - https://google.com/search?q=it.eighteenmonths.mystique.android.metropolis
 
-? scientific.graphing.calculator.t84.t36.t83/scientific.graphing.calculator.t84.t36.t83.main.ytivitcArotaluclaCecneicS_cxpFVWKLpGyBWv_deQTOWpN_ABjPMN
-
-:   name: Calc84
+scientific.graphing.calculator.t84.t36.t83/scientific.graphing.calculator.t84.t36.t83.main.ytivitcArotaluclaCecneicS_cxpFVWKLpGyBWv_deQTOWpN_ABjPMN:
+    name: Calc84
     reqt: 1
     reql: 2025-08-02 16:04:01
     hash: 8a805790c05cdbd7a6bc5fb88a4e4b6e4dd99a6e
@@ -10137,9 +10091,8 @@ io.trezor.suite/io.trezor.suite.MainActivity:
         - https://f-droid.org/en/packages/io.trezor.suite/
         - https://google.com/search?q=io.trezor.suite
 
-? digifit.android.virtuagym.pro.ymcaofgreatertoronto/digifit.android.virtuagym.presentation.screen.home.overview.view.HomeActivity
-
-:   name: YGTA Shine On
+digifit.android.virtuagym.pro.ymcaofgreatertoronto/digifit.android.virtuagym.presentation.screen.home.overview.view.HomeActivity:
+    name: YGTA Shine On
     reqt: 1
     reql: 2025-07-16 12:24:07
     hash: 6a1bd2f5c7931cd8f48d5e4a24a0674f58e98480
