--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -56,3 +56,44 @@ bible:
   - nl.cross_link.droid.olb/crc6410702a27ea4b0fae.MainActivity
   - kjvbible.verse.daily.bible.prayer/IlIIll1lII.ll1Ill11l1.l1ll1lI1l1.lI11ll11I1.IlIIlllI1l
   - com.schwegelbin.openbible/com.schwegelbin.openbible.MainActivity
+  
+pebble:
+  - coredevices.coreapp/coredevices.coreapp.MainActivity
+
+nagram_blue:
+  - nu.gpu.nagram/org.telegram.messenger.BlueIcon
+
+carbit_link:
+  - net.easyconn.carman.wws/net.easyconn.carman.MainActivity
+
+pmo_plus:
+  - my.com.publicmutual.CIFMobileApp/my.com.publicmutual.CIFMobileApp.InitApplicationActivity
+
+wafrn:
+  - dev.djara.wafrn_rn/dev.djara.wafrn_rn.MainActivity
+
+heptabase:
+  - com.heptabase.heptabase/com.heptabase.heptabase.MainActivity
+
+urban_company:
+  - com.urbanclap.urbanclap/com.urbanclap.urbanclap.core.app_icon.NormalUser
+
+postbank_alt_1: {}
+
+ailo:
+  - app.ailo/app.ailo.MainActivity
+
+sarawakpass:
+  - my.gov.sarawak.spass/my.gov.sarawak.spass.MainActivity
+
+skybus:
+  - au.com.skybus/au.com.skybus.basicScreens.onboarding.SplashActivity
+
+portanexus:
+  - com.tiagorvmartins.portanexus/com.tiagorvmartins.portanexus.MainActivity
+
+quitter:
+  - com.quitter.app/com.quitter.app.MainActivity
+
+kimi_ai:
+  - com.moonshot.kimichat/com.moonshot.kimichat.MainActivity
