--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -88,3 +88,7 @@ quitter:
 
 kimi_ai:
   - com.moonshot.kimichat/com.moonshot.kimichat.MainActivity
+
+proton_mail:
+  - ch.protonmail.android/ch.protonmail.android.RoutingActivity
+
