add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -92,3 +92,11 @@ kimi_ai:
 proton_mail:
   - ch.protonmail.android/ch.protonmail.android.RoutingActivity
 
+gow:
+  - game.of.whores311/org.renpy.android.PythonSDLActivity
+
+rijksmuseum:
+  - nl.rijksmuseum.mmt/nl.rijksmuseum.mmt.HomeActivity
+
+wallbit:
+  - io.wallbit/io.wallbit.MainActivity
