--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -100,3 +100,15 @@ rijksmuseum:
 
 wallbit:
   - io.wallbit/io.wallbit.MainActivity
+
+dawarich:
+  - app.dawarich.android/app.dawarich.android.MainActivity
+
+eblan_launcher:
+  - com.eblan.launcher/com.eblan.launcher.activity.MainActivity
+
+milou:
+  - com.santiifm.milou/com.santiifm.milou.MainActivity
+
+portarius:
+  - si.zbe.portarius/com.example.portarius.MainActivity
