--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -112,3 +112,9 @@ milou:
 
 portarius:
   - si.zbe.portarius/com.example.portarius.MainActivity
+
+pinkt:
+  - com.fibelatti.pinboard/com.fibelatti.pinboard.features.main.MainComposeActivity
+
+mach:
+  - cl.bci.sismo.mach/cl.bci.sismo.mach.machapp.splash.SplashActivity
