Add icons&compinfo (#1288)
* add icons, premium requests

* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -92,3 +92,29 @@ kimi_ai:
 proton_mail:
   - ch.protonmail.android/ch.protonmail.android.RoutingActivity
 
+gow:
+  - game.of.whores311/org.renpy.android.PythonSDLActivity
+
+rijksmuseum:
+  - nl.rijksmuseum.mmt/nl.rijksmuseum.mmt.HomeActivity
+
+wallbit:
+  - io.wallbit/io.wallbit.MainActivity
+
+dawarich:
+  - app.dawarich.android/app.dawarich.android.MainActivity
+
+eblan_launcher:
+  - com.eblan.launcher/com.eblan.launcher.activity.MainActivity
+
+milou:
+  - com.santiifm.milou/com.santiifm.milou.MainActivity
+
+portarius:
+  - si.zbe.portarius/com.example.portarius.MainActivity
+
+pinkt:
+  - com.fibelatti.pinboard/com.fibelatti.pinboard.features.main.MainComposeActivity
+
+mach:
+  - cl.bci.sismo.mach/cl.bci.sismo.mach.machapp.splash.SplashActivity
