--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -118,3 +118,9 @@ pinkt:
 
 mach:
   - cl.bci.sismo.mach/cl.bci.sismo.mach.machapp.splash.SplashActivity
+
+starbucks:
+  - com.starbucks.de/com.starbucks.emea.app.splash.SplashActivity
+
+subway:
+  - com.subway.mobile.emea.germany/com.subway.mobile.subwayapp03.ui.SplashActivity
