--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -13,6 +13,9 @@
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
 
+chronos_gem_stories:
+  - jp.ne.sk_mine.android.game.chronos_gem_stories/jp.ne.sk_mine.android.game.chronos_gem_stories.MainActivity
+
 blinkit:
   - com.grofers.customerapp/com.grofers.customerapp.DIWALI
 
