add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,3 +18,29 @@ forkyz: # Forkyz already exists in Delta, but it needs an update to the launch a
   - app.crossword.yourealwaysbe.forkyz/app.crossword.yourealwaysbe.forkyz.BrowseActivity
   - app.crossword.yourealwaysbe.forkyz/app.crossword.yourealwaysbe.forkyz.ForkyzActivity
 
+blueair:
+  - com.blueair.android/com.blueair.android.activity.WelcomeActivity
+
+epas_airnow:
+  - com.saic.airnow/com.saic.airnow.MainActivity
+
+fitindex:
+  - com.qingniu.fitindex/com.renpho.app.main.view.activity.LauncherActivity
+
+flaming_durtles:
+  - com.the_tinkering.wk/com.the_tinkering.wk.activities.MainActivity
+
+gameye:
+  - com.hairyharri.gameye/com.hairyharri.gameye.view.LaunchActivity
+
+lendingclub:
+  - com.q2e.firsttradeunionbank3351.mobile.production/com.lendingclub.alchemy.MainActivity
+
+meow_tower:
+  - com.grapetree.meowtower/com.boxcat.MeowActivity
+
+pet_first_aid:
+  - com.cube.arc.pfa/com.cube.arc.pfa.BootActivity
+
+the_tapping_solution:
+  - com.datechnologies.tappingsolution/com.datechnologies.tappingsolution.screens.launch.LaunchActivity
