--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -44,3 +44,6 @@ pet_first_aid:
 
 the_tapping_solution:
   - com.datechnologies.tappingsolution/com.datechnologies.tappingsolution.screens.launch.LaunchActivity
+
+pzizz:
+  - com.pzizz.android/com.pzizz.android.activity.EntryActivity
