--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -47,3 +47,24 @@ the_tapping_solution:
 
 pzizz:
   - com.pzizz.android/com.pzizz.android.activity.EntryActivity
+
+docker_manager:
+  - com.pavit.docker/com.pavit.docker.MainActivity
+
+emma:
+  - com.emmaprod/com.emmaprod.MainActivitygold
+
+instant_translate_on_screen:
+  - com.spaceship.screen.textcopy/com.spaceship.screen.translate.page.SplashActivity
+
+lte_cleaner_foss:
+  - io.mdp43140.ltecleaner/io.mdp43140.ltecleaner.MainActivity
+
+sap_field_service_management:
+  - com.sap.fsm/com.coresuite.android.AppStartActivity
+
+void_for_jellyfin:
+  - com.hritwik.avoid/com.hritwik.avoid.MainActivity
+
+wifi_audio_streaming:
+  - com.cuscus.wifiaudiostreaming/com.cuscus.wifiaudiostreaming.MainActivity
