--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -66,3 +66,6 @@ void_for_jellyfin:
 
 wifi_audio_streaming:
   - com.cuscus.wifiaudiostreaming/com.cuscus.wifiaudiostreaming.MainActivity
+
+brawlhalla:
+  - air.com.ubisoft.brawl.halla.platform.fighting.action.pvp/air.com.ubisoft.brawl.halla.platform.fighting.action.pvp.AIRAppEntry
