--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -69,3 +69,12 @@ wifi_audio_streaming:
 
 brawlhalla:
   - air.com.ubisoft.brawl.halla.platform.fighting.action.pvp/air.com.ubisoft.brawl.halla.platform.fighting.action.pvp.AIRAppEntry
+
+current_activity:
+  - io.github.ratul.topactivity/io.github.ratul.topactivity.ui.MainActivity
+
+fladder:
+  - nl.jknaapen.fladder/nl.jknaapen.fladder.MainActivity
+
+privadovpn:
+  - io.privado.android/io.privado.android.ui.splash.SplashActivity
