--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -78,3 +78,9 @@ fladder:
 
 privadovpn:
   - io.privado.android/io.privado.android.ui.splash.SplashActivity
+
+tempus:
+  - com.eddyizm.tempus/com.cappielloantonio.tempo.ui.activity.MainActivity
+
+tempus_degoogled:
+  - com.eddyizm.degoogled.tempus/com.cappielloantonio.tempo.ui.activity.MainActivity
