--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -84,3 +84,6 @@ tempus:
 
 tempus_degoogled:
   - com.eddyizm.degoogled.tempus/com.cappielloantonio.tempo.ui.activity.MainActivity
+
+echo:
+  - dev.brahmkshatriya.echo.nightly/dev.brahmkshatriya.echo.MainActivity$Back
