--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -28,7 +28,7 @@ notification_log:
 marriott_bonvoy:
   - com.marriott.mrt/com.marriott.mrt.v10.features.common.splash_screen.SplashScreenActivity
 
-yournews:
+your_news:
   - com.your_news/com.your_news.MainActivity
 
 mexican_train:
