new icon: De1984

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,4 +36,6 @@ mexican_train:
 
 maytag:
   - com.maytag.android.mtapp/com.whirlpool.maytag.ui.activity.splash.SplashActivity
-    
+
+de1984:
+  - io.github.dorumrr.de1984/io.github.dorumrr.de1984.ui.MainActivity
