new icon: Pixel IMS

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -39,3 +39,7 @@ maytag:
 
 de1984:
   - io.github.dorumrr.de1984/io.github.dorumrr.de1984.ui.MainActivity
+
+pixel_ims:
+  - dev.bluehouse.enablevolte/dev.bluehouse.enablevolte.HomeActivity
+  - dev.bluehouse.enablevolte/dev.bluehouse.enablevolte.MainActivity
