new icon: TAPSI

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -43,3 +43,6 @@ de1984:
 pixel_ims:
   - dev.bluehouse.enablevolte/dev.bluehouse.enablevolte.HomeActivity
   - dev.bluehouse.enablevolte/dev.bluehouse.enablevolte.MainActivity
+
+tapsi:
+  - taxi.tap30.passenger/taxi.tap30.passenger.MainActivity
