new icon: NouTube

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -46,3 +46,6 @@ pixel_ims:
 
 tapsi:
   - taxi.tap30.passenger/taxi.tap30.passenger.MainActivity
+
+noutube: # https://www.svgrepo.com/svg/406821/otter
+  - jp.nonbili.noutube/jp.nonbili.noutube.MainActivity
