new icon: Samsung Display Assistant

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -49,3 +49,6 @@ tapsi:
 
 noutube: # https://www.svgrepo.com/svg/406821/otter
   - jp.nonbili.noutube/jp.nonbili.noutube.MainActivity
+
+samsung_display_assistant:
+  - com.samsung.android.displayassistant/com.samsung.android.displayassistant.presentation.ui.main.DisplayAssistantMainActivity
