new icon: RailOne

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -52,3 +52,6 @@ noutube: # https://www.svgrepo.com/svg/406821/otter
 
 samsung_display_assistant:
   - com.samsung.android.displayassistant/com.samsung.android.displayassistant.presentation.ui.main.DisplayAssistantMainActivity
+
+railone:
+  - org.cris.aikyam/com.example.aikyam.MainActivity
