new icon: Friday Night Funkin'

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -55,3 +55,6 @@ samsung_display_assistant:
 
 railone:
   - org.cris.aikyam/com.example.aikyam.MainActivity
+
+friday_night_funkin:
+  - me.funkin.fnf/me.funkin.fnf.MainActivity
