new icon: KPN Fresh

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -58,3 +58,6 @@ railone:
 
 friday_night_funkin:
   - me.funkin.fnf/me.funkin.fnf.MainActivity
+
+kpn_fresh:
+  - com.kpn.android/com.kpn.android.MainActivity
