icon link: Telega -> Telegram X

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -61,3 +61,6 @@ friday_night_funkin:
 
 kpn_fresh:
   - com.kpn.android/com.kpn.android.MainActivity
+
+telegram_x:
+  - ru.dahl.messenger/org.telegram.messenger.DefaultIcon
