new icon: NF RADAR

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -64,3 +64,6 @@ kpn_fresh:
 
 telegram_x:
   - ru.dahl.messenger/org.telegram.messenger.DefaultIcon
+
+nf_radar:
+  - ru.onf.rdr/ru.onf.rdr.ui.start.StartActivity
