--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,4 +36,34 @@ mexican_train:
 
 maytag:
   - com.maytag.android.mtapp/com.whirlpool.maytag.ui.activity.splash.SplashActivity
-    
+
+de1984:
+  - io.github.dorumrr.de1984/io.github.dorumrr.de1984.ui.MainActivity
+
+pixel_ims:
+  - dev.bluehouse.enablevolte/dev.bluehouse.enablevolte.HomeActivity
+  - dev.bluehouse.enablevolte/dev.bluehouse.enablevolte.MainActivity
+
+tapsi:
+  - taxi.tap30.passenger/taxi.tap30.passenger.MainActivity
+
+noutube: # https://www.svgrepo.com/svg/406821/otter
+  - jp.nonbili.noutube/jp.nonbili.noutube.MainActivity
+
+samsung_display_assistant:
+  - com.samsung.android.displayassistant/com.samsung.android.displayassistant.presentation.ui.main.DisplayAssistantMainActivity
+
+railone:
+  - org.cris.aikyam/com.example.aikyam.MainActivity
+
+friday_night_funkin:
+  - me.funkin.fnf/me.funkin.fnf.MainActivity
+
+kpn_fresh:
+  - com.kpn.android/com.kpn.android.MainActivity
+
+telegram_x:
+  - ru.dahl.messenger/org.telegram.messenger.DefaultIcon
+
+nf_radar:
+  - ru.onf.rdr/ru.onf.rdr.ui.start.StartActivity
