add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,40 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+
+becker_central_control:
+  - com.centralcontrol.becker_central_control/com.centralcontrol.becker_central_control.MainActivity
+
+beihilfe_bw:
+  - sinc.cases.beihilfe.bawu/sinc.cases.beihilfe.bawu.produktion.MainActivity
+
+birdbuddy:
+  - com.birdbuddy.app/com.birdbuddy.app.MainActivity
+
+btaskee:
+  - com.lanterns.btaskee/com.lanterns.btaskee.MainActivity
+
+debeka_dnapp:
+  - de.debeka.dna/com.staffbase.capacitor.MainActivity
+
+dormakaba_evolo_smart:
+  - net.comerge.dormakaba.smart/net.comerge.dormakaba.smart.MainActivity
+
+dormakaba_mobile_access:
+  - com.dormakaba.access/com.dormakaba.access.application.splash.SplashActivity
+
+my_mobifone:
+  - vms.com.vn.mymobifone/vms.com.vn.mymobi.activities.SplashScreenActivity
+
+my_viettel:
+  - com.vttm.vietteldiscovery/com.vttm.myviettelV2.activity.NFirstUserActivity
+
+paralino:
+  - app.paralino.android/app.paralino.android.ui.main.MainActivity
+
+senec_app:
+  - com.senecapp/com.senecapp.ui.login.LoginActivity
+
+xanh_sm:
+  - com.gsm.customer/com.gsm.customer.ui.splash.SplashActivity
