--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -49,3 +49,24 @@ senec_app:
 
 xanh_sm:
   - com.gsm.customer/com.gsm.customer.ui.splash.SplashActivity
+
+glyph_compass:
+  - com.JayKayCooperations.glyph_compass/com.JayKayCooperations.glyph_compass.MainActivity
+
+glyph_essentials:
+  - com.tldc.essentials/com.tldc.essentials.MainActivity
+
+glyph_museum:
+  - com.pauwma.glyphmuseum/com.pauwma.glyphmuseum.MainActivity
+
+glyph_nexus:
+  - com.voidtechstudios.smartglyph/com.voidtechstudios.smartglyph.OnboardingActivity
+
+glyph_sharge:
+  - com.bleelblep.glyphsharge/com.bleelblep.glyphsharge.MainActivity
+
+n8n_monitor:
+  - com.microapplab.n8nmonitor/com.microapplab.n8nmonitor.MainActivity
+
+nothingland:
+  - com.theglitchh.NothingLand/com.theglitchh.NothingLand.activities.MainActivity
